# languee

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.MD  docker-compose.yml  package.json
.claude/agents/: architect.md  decomposer.md  devops.md  implementer.md  lead.md  linter.md  qa.md  restructurer.md
.claude/commands/: forge-dry.md  forge-feedback.md  forge-infra.md  forge-recovery.md  forge-refactor.md  forge-review.md  forge-sync.md  forge.md
apps/languee-back/: .dockerignore  Dockerfile  eslint.config.js  package.json  tsconfig.json
apps/languee-back/coverage/: clover.xml  coverage-final.json  lcov.info
apps/languee-back/coverage/lcov-report/: index.html
apps/languee-back/coverage/lcov-report/src/: app.controller.ts.html  app.module.ts.html  app.service.ts.html  index.html  main.ts.html
apps/languee-back/prisma/: schema.prisma
apps/languee-back/prisma/migrations/20260409094257_add_words_definitions/: migration.sql
apps/languee-back/src/: app.controller.ts  app.module.ts  main.ts  swagger.setup.spec.ts  swagger.setup.ts
apps/languee-back/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
apps/languee-back/src/modules/config/: config.module.spec.ts  config.module.ts  config.validation.ts  configuration.ts
apps/languee-back/src/modules/definitions/: constants.ts  definitions.errors.ts  definitions.module.ts  definitions.service.spec.ts  definitions.service.ts  definitions.tokens.ts
apps/languee-back/test/: jest-e2e.json
forge/: config.py  pyproject.toml
scripts/: load-env.sh
(+94 files in other folders)
