[project]
name = "forge"
version = "0.1.0"
description = "Closed-loop agentic development pipeline for Languee"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
